// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionButtons/> should render links and buttons  1`] = `
<div
  class="container"
>
  <div>
    <span
      class="actionButtons group horizontal"
    >
      <button
        class="wrapper actionButton fill secondary medium left"
        type="button"
      >
        button - I am in snapshots
      </button>
      <button
        class="wrapper actionButton fill secondary medium right"
        type="button"
      >
        button - I am in snapshots too
      </button>
    </span>
  </div>
  <ul
    class="listGroup list-group list-group-flush"
  >
    <li
      class="groupItem list-group-item"
    >
      <a
        class="link"
        href="heaven"
        rel="noopener noreferrer"
        target="_blank"
      >
        link - I am in snapshots
        <i
          class="linkIcon material-icons"
        >
          open_in_new
        </i>
      </a>
    </li>
    <li
      class="groupItem list-group-item"
    >
      <a
        class="link"
        href="over the rainbow"
        rel="noopener noreferrer"
        target="_blank"
      >
        the object above is a link to heaven
        <i
          class="linkIcon material-icons"
        >
          open_in_new
        </i>
      </a>
    </li>
  </ul>
</div>
`;

exports[`<ActionButtons/> should render links and buttons in edition mode 1`] = `
<div
  class="container"
>
  <ul
    class="list-group list-group-flush"
  >
    <li
      class="editRow list-group-item"
    >
      <button
        class="btn btn-secondary"
        type="button"
      >
        button - I am in snapshots
      </button>
      <span
        class="editIcons"
      >
        <i
          class="material-icons text-faded clickable"
        >
          settings
        </i>
        <i
          class="material-icons text-danger clickable"
        >
          close
        </i>
      </span>
    </li>
    <li
      class="editRow list-group-item"
    >
      <button
        class="btn btn-secondary"
        type="button"
      >
        button - I am in snapshots too
      </button>
      <span
        class="editIcons"
      >
        <i
          class="material-icons text-faded clickable"
        >
          settings
        </i>
        <i
          class="material-icons text-danger clickable"
        >
          close
        </i>
      </span>
    </li>
  </ul>
  <button
    class="wrapper addButton fill secondary medium"
    type="button"
  >
    <span
      class="wrapper"
    >
      <i
        class="material-icons icon isLeft medium"
      >
        add
      </i>
    </span>
    Add Button
  </button>
  <ul
    class="listGroup list-group list-group-flush"
  >
    <li
      class="groupItem list-group-item"
    >
      <a
        class="link"
        href="heaven"
        rel="noopener noreferrer"
        target="_blank"
      >
        link - I am in snapshots
        <i
          class="linkIcon material-icons"
        >
          open_in_new
        </i>
      </a>
      <span
        class="editIcons"
      >
        <i
          class="material-icons text-faded clickable"
          id="custom-action-link-templatePath-0"
        >
          settings
        </i>
        <i
          class="material-icons text-danger clickable"
        >
          close
        </i>
      </span>
    </li>
    <li
      class="groupItem list-group-item"
    >
      <a
        class="link"
        href="over the rainbow"
        rel="noopener noreferrer"
        target="_blank"
      >
        the object above is a link to heaven
        <i
          class="linkIcon material-icons"
        >
          open_in_new
        </i>
      </a>
      <span
        class="editIcons"
      >
        <i
          class="material-icons text-faded clickable"
          id="custom-action-link-templatePath-1"
        >
          settings
        </i>
        <i
          class="material-icons text-danger clickable"
        >
          close
        </i>
      </span>
    </li>
  </ul>
  <button
    class="wrapper addButton fill secondary medium"
    id="custom-action-link-templatePath"
    type="button"
  >
    <span
      class="wrapper"
    >
      <i
        class="material-icons icon isLeft medium"
      >
        add
      </i>
    </span>
    Add Redirection Link
  </button>
</div>
`;
